# django-csp-observer

./: .gitignore  LICENSE  MANIFEST.in  README.md  apps.py  setup.cfg  setup.py
csp_observer/: admin.py  apps.py  managers.py  middleware.py  models.py  remote.py  report_handlers.py  report_utils.py  rule_evaluator.py  settings.py  update.py  urls.py  views.py
csp_observer/management/commands/: cleanunused.py  updaterules.py
csp_observer/migrations/: 0001_initial.py  0002_auto_20200618_1232.py  0003_auto_20200703_1300.py  0004_csprule_is_custom_rule.py  0005_auto_20200819_1908.py  0006_auto_20200819_1920.py  0007_config.py  0008_auto_20200819_1955.py  0009_auto_20200821_0838.py  0010_auto_20200822_1446.py  0011_auto_20200822_1531.py
csp_observer/static/csp_observer/css/: base.css  clientui.css
csp_observer/static/csp_observer/js/: base.js  clientui.js  ignoreButton.js  pieCharts.js  tripwire.js
csp_observer/static/css/: clientui.css
csp_observer/static/js/: clientui.js  tripwire.js
csp_observer/templates/: cspo_base.html  inline_result.html  result_tag.html
csp_observer/templates/admin/: _base.html  cspo_index.html  dashboard.html
csp_observer/templates/client_ui/: base.html  popup.html  privacy.html  result_detail.html
csp_observer/templatetags/: csp_check_result.py  cspo_markdown.py
